// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> 1`] = `
"<div style=\\"display: inline-block;\\" class=\\"checkbox\\"><input type=\\"checkbox\\" name=\\"test-name\\" id=\\"test-id\\">
  <div class=\\"custom-checkbox\\"></div>
</div>"
`;

exports[`<Checkbox checked /> 1`] = `
"<div style=\\"display: inline-block;\\" class=\\"checkbox\\"><input type=\\"checkbox\\" checked=\\"\\">
  <div class=\\"custom-checkbox\\"></div>
</div>"
`;
